include/grx-3.0.h

typedef struct _GrxFrame        GrxFrame;
typedef struct _GrxContext      GrxContext;
/* ================================================================== */
/*                        SYSTEM TYPE DEF's                           */
/* ================================================================== */

/* need unsigned 32 bit integer for color stuff */
typedef guint32 GrxColor;
/*
 * color table (for primitives using several colors):
 *   it is an array of colors with the first element being
 *   the number of colors in the table
 */
typedef GrxColor *GrColorTableP;
typedef struct {                        /* framed box colors */
        GrxColor fbx_intcolor;
        GrxColor fbx_topcolor;
        GrxColor fbx_rightcolor;
        GrxColor fbx_bottomcolor;
        GrxColor fbx_leftcolor;
} GrFBoxColors;
/* ================================================================== */
/*                 NON CLIPPING DRAWING PRIMITIVES                    */
/* ================================================================== */

void GrPlotNC(int x,int y,GrxColor c);
void GrLineNC(int x1,int y1,int x2,int y2,GrxColor c);
void GrHLineNC(int x1,int x2,int y,GrxColor c);
void GrVLineNC(int x,int y1,int y2,GrxColor c);
void GrBoxNC(int x1,int y1,int x2,int y2,GrxColor c);
void GrFilledBoxNC(int x1,int y1,int x2,int y2,GrxColor c);
void GrFramedBoxNC(int x1,int y1,int x2,int y2,int wdt,const GrFBoxColors *c);
void GrBitBltNC(GrxContext *dst,int x,int y,GrxContext *src,int x1,int y1,int x2,int y2,GrxColor op);
GrxColor GrPixelNC(int x,int y);
#define GrPlotNC(x,y,c) (                                                      \
        (*grx_get_current_frame_driver()->drawpixel)(                          \
        ((x) + grx_context_get_current()->x_offset),                                  \
        ((y) + grx_context_get_current()->y_offset),                                  \
        ((c))                                                                  \
        )                                                                      \
)
#define GrPixelNC(x,y) (                                                       \
        (*grx_get_current_frame_driver()->readpixel)(                          \
        (GrxFrame *)(&grx_context_get_current()->frame),                              \
        ((x) + grx_context_get_current()->x_offset),                                  \
        ((y) + grx_context_get_current()->y_offset)                                   \
        )                                                                      \
)
#define GR_TEXT_IS_VERTICAL(d)  ((d) & 1)
#define GR_ALIGN_CENTER         1       /* X, Y   */
/*
 * character types in text strings
 */
#define GR_BYTE_TEXT            0       /* one byte per character */
#define GR_WORD_TEXT            1       /* two bytes per character */
#define GR_ATTR_TEXT            2       /* chr w/ PC style attribute byte */
/*
 * macros to access components of various string/character types
 */
#define GR_TEXTCHR_SIZE(ty)     (((ty) == GR_BYTE_TEXT) ? sizeof(char) : sizeof(short))
#define GR_TEXTCHR_CODE(ch,ty)  (((ty) == GR_WORD_TEXT) ? (unsigned short)(ch) : (unsigned char)(ch))
#define GR_TEXTCHR_ATTR(ch,ty)  (((ty) == GR_ATTR_TEXT) ? ((unsigned short)(ch) >> 8) : 0)
#define GR_BUILD_ATTR(fg,bg,ul) (_GR_textattrintensevideo ? \
                                (((fg) & 15) | (((bg) & 15) << 4)) \
                                : \
                                (((fg) & 15) | (((bg) & 7) << 4) | ((ul) ? 128 : 0)) \
                                )
#define GR_ATTR_FGCOLOR(attr)   (((attr)     ) &  15)
#define GR_ATTR_BGCOLOR(attr)   (_GR_textattrintensevideo ? \
                                (((attr) >> 4) &  15) \
                                : \
                                (((attr) >> 4) &   7) \
                                )
#define GR_ATTR_UNDERLINE(attr) (_GR_textattrintensevideo ? \
                                (0) \
                                : \
                                (((attr)     ) & 128) \
                                )
/*
 * font structures
 */
typedef struct _GR_fontHeader {         /* font descriptor */
        char    *name;                      /* font name */
        char    *family;                    /* font family name */
        char     proportional;              /* characters have varying width */
        char     scalable;                  /* derived from a scalable font */
        char     preloaded;                 /* set when linked into program */
        char     modified;                  /* "tweaked" font (resized, etc..) */
        unsigned int  width;                /* width (proportional=>average) */
        unsigned int  height;               /* font height */
        unsigned int  baseline;             /* baseline pixel pos (from top) */
        unsigned int  ulpos;                /* underline pixel pos (from top) */
        unsigned int  ulheight;             /* underline width */
        unsigned int  minchar;              /* lowest character code in font */
        unsigned int  numchars;             /* number of characters in font */
} GrFontHeader;
typedef struct _GR_fontChrInfo {        /* character descriptor */
        unsigned int  width;                /* width of this character */
        unsigned int  offset;               /* offset from start of bitmap */
} GrFontChrInfo;
typedef struct _GR_font {               /* the complete font */
        struct  _GR_fontHeader  h;          /* the font info structure */
        char     *bitmap;                   /* character bitmap array */
        char     *auxmap;                   /* map for rotated & underline chrs */
        unsigned int  minwidth;             /* width of narrowest character */
        unsigned int  maxwidth;             /* width of widest character */
        unsigned int  auxsize;              /* allocated size of auxiliary map */
        unsigned int  auxnext;              /* next free byte in auxiliary map */
        unsigned int  *auxoffs[7];          /* offsets to completed aux chars */
        struct  _GR_fontChrInfo chrinfo[1]; /* character info (not act. size) */
} GrFont;
extern  GrFont          GrFont_PC6x8;
extern  GrFont          GrFont_PC8x8;
extern  GrFont          GrFont_PC8x14;
extern  GrFont          GrFont_PC8x16;
#define GrDefaultFont   GrFont_PC8x14
GrFont *GrLoadFont(char *name);
GrFont *GrLoadConvertedFont(char *name,int cvt,int w,int h,int minch,int maxch);
GrFont *GrBuildConvertedFont(const GrFont *from,int cvt,int w,int h,int minch,int maxch);
void GrUnloadFont(GrFont *font);
void GrDumpFont(const GrFont *f,char *CsymbolName,char *fileName);
void GrDumpFnaFont(const GrFont *f, char *fileName);
void GrSetFontPath(char *path_list);
int  GrFontCharPresent(const GrFont *font,int chr);
int  GrFontCharWidth(const GrFont *font,int chr);
int  GrFontCharHeight(const GrFont *font,int chr);
int  GrFontCharBmpRowSize(const GrFont *font,int chr);
int  GrFontCharBitmapSize(const GrFont *font,int chr);
int  GrFontStringWidth(const GrFont *font,const void *text,int len,int type);
int  GrFontStringHeight(const GrFont *font,const void *text,int len,int type);
int  GrProportionalTextWidth(const GrFont *font,const void *text,int len,int type);
char *GrBuildAuxiliaryBitmap(GrFont *font,int chr,int dir,int ul);
char *GrFontCharBitmap(const GrFont *font,int chr);
char *GrFontCharAuxBmp(GrFont *font,int chr,int dir,int ul);
typedef union _GR_textColor {           /* text color union */
        GrxColor       v;                    /* color value for "direct" text */
        GrColorTableP p;                    /* color table for attribute text */
} GrTextColor;
typedef struct _GR_textOption {         /* text drawing option structure */
        struct _GR_font     *txo_font;      /* font to be used */
        union  _GR_textColor txo_fgcolor;   /* foreground color */
        union  _GR_textColor txo_bgcolor;   /* background color */
        char    txo_chrtype;                /* character type (see above) */
        char    txo_direct;                 /* direction (see above) */
        char    txo_xalign;                 /* X alignment (see above) */
        char    txo_yalign;                 /* Y alignment (see above) */
} GrTextOption;
typedef struct {                        /* fixed font text window desc. */
        struct _GR_font     *txr_font;      /* font to be used */
        union  _GR_textColor txr_fgcolor;   /* foreground color */
        union  _GR_textColor txr_bgcolor;   /* background color */
        void   *txr_buffer;                 /* pointer to text buffer */
        void   *txr_backup;                 /* optional backup buffer */
        int     txr_width;                  /* width of area in chars */
        int     txr_height;                 /* height of area in chars */
        int     txr_lineoffset;             /* offset in buffer(s) between rows */
        int     txr_xpos;                   /* upper left corner X coordinate */
        int     txr_ypos;                   /* upper left corner Y coordinate */
        char    txr_chrtype;                /* character type (see above) */
} GrTextRegion;
int  GrCharWidth(int chr,const GrTextOption *opt);
int  GrCharHeight(int chr,const GrTextOption *opt);
void GrCharSize(int chr,const GrTextOption *opt,int *w,int *h);
int  GrStringWidth(void *text,int length,const GrTextOption *opt);
int  GrStringHeight(void *text,int length,const GrTextOption *opt);
void GrStringSize(void *text,int length,const GrTextOption *opt,int *w,int *h);
void GrDrawChar(int chr,int x,int y,const GrTextOption *opt);
void GrDrawString(void *text,int length,int x,int y,const GrTextOption *opt);
void GrTextXY(int x,int y,char *text,GrxColor fg,GrxColor bg);
void GrDumpChar(int chr,int col,int row,const GrTextRegion *r);
void GrDumpText(int col,int row,int wdt,int hgt,const GrTextRegion *r);
void GrDumpTextRegion(const GrTextRegion *r);
#define GrFontCharPresent(f,ch) (                                              \
        ((unsigned int)(ch) - (f)->h.minchar) < (f)->h.numchars                \
)
#define GrFontCharWidth(f,ch) (                                                \
        GrFontCharPresent(f,ch) ?                                              \
        (int)(f)->chrinfo[(unsigned int)(ch) - (f)->h.minchar].width :         \
        (f)->h.width                                                           \
)
#define GrFontCharHeight(f,ch) (                                               \
        (f)->h.height                                                          \
)
#define GrFontCharBmpRowSize(f,ch) (                                           \
        GrFontCharPresent(f,ch) ?                                              \
        (((f)->chrinfo[(unsigned int)(ch) - (f)->h.minchar].width + 7) >> 3) : \
        0                                                                      \
)
#define GrFontCharBitmapSize(f,ch) (                                           \
        GrFontCharBmpRowSize(f,ch) * (f)->h.height                             \
)
#define GrFontStringWidth(f,t,l,tp) (                                          \
        (f)->h.proportional ?                                                  \
        GrProportionalTextWidth((f),(t),(l),(tp)) :                            \
        (f)->h.width * (l)                                                     \
)
#define GrFontStringHeight(f,t,l,tp) (                                         \
        (f)->h.height                                                          \
)
#define GrFontCharBitmap(f,ch) (                                               \
        GrFontCharPresent(f,ch) ?                                              \
        &(f)->bitmap[(f)->chrinfo[(unsigned int)(ch) - (f)->h.minchar].offset]:\
        (char *)0                                                              \
)
#define GrFontCharAuxBmp(f,ch,dir,ul) (                                        \
        (((dir) == GR_TEXT_DEFAULT) && !(ul)) ?                                \
        GrFontCharBitmap(f,ch) :                                               \
        GrBuildAuxiliaryBitmap((f),(ch),(dir),(ul))                            \
)
#define GrCharWidth(c,o) (                                                     \
        GR_TEXT_IS_VERTICAL((o)->txo_direct) ?                                 \
        GrFontCharHeight((o)->txo_font,GR_TEXTCHR_CODE(c,(o)->txo_chrtype)) :  \
        GrFontCharWidth( (o)->txo_font,GR_TEXTCHR_CODE(c,(o)->txo_chrtype))    \
)
#define GrCharHeight(c,o) (                                                    \
        GR_TEXT_IS_VERTICAL((o)->txo_direct) ?                                 \
        GrFontCharWidth( (o)->txo_font,GR_TEXTCHR_CODE(c,(o)->txo_chrtype)) :  \
        GrFontCharHeight((o)->txo_font,GR_TEXTCHR_CODE(c,(o)->txo_chrtype))    \
)
#define GrCharSize(c,o,wp,hp) do {                                             \
        *(wp) = GrCharHeight(c,o);                                             \
        *(hp) = GrCharWidth( c,o);                                             \
} while(0)
#define GrStringWidth(t,l,o) (                                                 \
        GR_TEXT_IS_VERTICAL((o)->txo_direct) ?                                 \
        GrFontStringHeight((o)->txo_font,(t),(l),(o)->txo_chrtype) :           \
        GrFontStringWidth( (o)->txo_font,(t),(l),(o)->txo_chrtype)             \
)
#define GrStringHeight(t,l,o) (                                                \
        GR_TEXT_IS_VERTICAL((o)->txo_direct) ?                                 \
        GrFontStringWidth( (o)->txo_font,(t),(l),(o)->txo_chrtype) :           \
        GrFontStringHeight((o)->txo_font,(t),(l),(o)->txo_chrtype)             \
)
#define GrStringSize(t,l,o,wp,hp) do {                                         \
        *(wp) = GrStringWidth( t,l,o);                                         \
        *(hp) = GrStringHeight(t,l,o);                                         \
} while(0)