bindings/vala/grx-3.0.vapi


    [CCode (cname = "GrPlotNC")]
    public void plot_no_clip(int x, int y, Color c);
    [CCode (cname = "GrLineNC")]
    public void line_no_clip(int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrHLineNC")]
    public void horiz_line_no_clip(int x1, int x2, int y, Color c);
    [CCode (cname = "GrVLineNC")]
    public void vert_line_no_clip(int x, int y1, int y2, Color c);
    [CCode (cname = "GrBoxNC")]
    public void box_no_clip(int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrFilledBoxNC")]
    public void filled_box_no_clip(int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrFramedBoxNC")]
    public void framed_box_no_clip(int x1, int y1, int x2, int y2, int wdt, FramedBoxColors c);
    [CCode (cname = "GrBitBltNC")]
    public void bit_blt_no_clip(Context dest, int x, int y, Context src, int x1, int y1, int x2, int y2, ColorMode op = ColorMode.WRITE);

    [CCode (cname =  "GrPixelNC")]
    public Color pixel_no_clip (int x, int y);

    [CCode (cname = "int", cprefix = "GR_TEXT_", has_type_id = false)]
    public enum TextDirection {
        RIGHT,
        DOWN,
        LEFT,
        UP,
        DEFAULT;

        [CCode (cname = "GR_TEXT_IS_VERTICAL")]
        public bool is_vertical ();
    }

    [CCode (cname = "int", cprefix = "GR_ALIGN_", has_type_id = false)]
    public enum TextHorizAlign {
        LEFT,
        CENTER,
        RIGHT,
        DEFAULT;
    }

    [CCode (cname = "int", cprefix = "GR_ALIGN_", has_type_id = false)]
    public enum TextVertAlign {
        TOP,
        [CCode (cname = "GR_ALIGN_CENTER")]
        MIDDLE,
        BOTTOM,
        BASELINE,
        DEFAULT;
    }

    [CCode (cname = "int", has_type_id = false)]
    public enum ChrType {
        [CCode (cname = "GR_BYTE_TEXT")]
        BYTE,
        [CCode (cname = "GR_WORD_TEXT")]
        WORD,
        [CCode (cname = "GR_ATTR_TEXT")]
        ATTR;

        [CCode (cname = "GR_TEXTCHR_SIZE")]
        public int size ();
        [CCode (cname = "GR_TEXTCHR_CODE", instance_pos = 1.1)]
        public uint code (int ch);
        [CCode (cname = "GR_TEXTCHR_ATTR", instance_pos = 1.1)]
        public CharAttr attr (int ch);
    }

    [CCode (cname = "char", has_destroy_function = false, has_copy_function = false, has_type_id = false)]
    [SimpleType]
    public struct CharAttr : char {
        [CCode (cname = "GR_BUILD_ATTR")]
        public static CharAttr build (Color fg, Color bg, bool underline);
        [CCode (cname = "GR_ATTR_FGCOLOR")]
        public Color fg_color ();
        [CCode (cname = "GR_ATTR_BGCOLOR")]
        public Color bg_color ();
        [CCode (cname = "GR_ATTR_UNDERLINE")]
        public bool underline ();
    }

    [CCode (cname = "int", cprefix = "GR_FONTCVT_", has_type_id = false)]
    [Flags]
    public enum FontConversionFlag {
        NONE,
        [CCode (cname = "SKIPCHARS")]
        SKIP_CHARS,
        RESIZE,
        ITALICIZE,
        BOLDIFY,
        FIXIFY,
        PROPORTION
    }

    [CCode (cname = "struct _GR_fontChrInfo", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class FontChrInfo {
        [CCode (cname = "struct _GR_fontChrInfo", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        public uint width;
        public uint offset;

        [CCode (cname = "g_malloc0")]
        public FontChrInfo (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    [CCode (cname = "struct _GR_font", free_function = "GrUnloadFont", has_type_id = false)]
    [Compact]
    public class Font {
        [CCode (cname = "&GrFont_PC6x8")]
        public static unowned Font pc6x8;
        [CCode (cname = "&GrFont_PC8x8")]
        public static unowned Font pc8x8;
        [CCode (cname = "&GrFont_PC8x14")]
        public static unowned Font pc8x14;
        [CCode (cname = "&GrFont_PC8x16")]
        public static unowned Font pc8x16;
        [CCode (cname = "&GrDefaultFont")]
        public static unowned Font default;

        [CCode (cname = "h.name")]
        public string name;
        [CCode (cname = "h.family")]
        public string family;
        [CCode (cname = "h.proportional")]
        public bool proportional;
        [CCode (cname = "h.scalable")]
        public bool scalable;
        [CCode (cname = "h.prelaoded")]
        public bool prelaoded;
        [CCode (cname = "h.modified")]
        public bool modified;
        [CCode (cname = "h.width")]
        public uint width;
        [CCode (cname = "h.height")]
        public uint height;
        [CCode (cname = "h.baseline")]
        public uint baseline;
        [CCode (cname = "h.ulpos")]
        public uint underline_pos;
        [CCode (cname = "h.ulheight")]
        public uint underline_height;
        [CCode (cname = "h.minchar")]
        public uint min_char;
        [CCode (cname = "h.numchars")]
        public uint num_chars;

        public char *bitmap;
        public char *auxmap;
        public uint minwidth;
        public uint maxwidth;
        public uint auxsize;
        public uint auxnext;
        [CCode (array_length_cexpr = "7")]
        public int[] auxofs;
        [CCode (array_length_cexpr = "1")]
        public FontChrInfo[] chrinfo;

        [CCode (cname = "GrLoadFont")]
        public static Font? load (string name);
        [CCode (cname = "GrLoadConvertedFont")]
        public static Font? load_converted (string name, FontConversionFlag flags, int w = 0, int h = 0, int min_ch = 0, int max_ch = 0);
        [CCode (cname = "GrBuildConvertedFont")]
        public Font build_converted (FontConversionFlag flags, int w = 0, int h = 0, int min_ch = 0, int max_ch = 0);

        [CCode (cname = "GrDumpFont")]
        public void dump (string c_symbol_name, string file_name);
        [CCode (cname = "GrDumpFnaFont")]
        public void dump_fna (string file_name);
        [CCode (cname = "GrSetFontPath")]
        public static void set_path (string path_list);

        [CCode (cname = "GrFontCharPresent")]
        public int char_present (int chr);
        [CCode (cname = "GrFontCharWidth")]
        public int char_width (int chr);
        [CCode (cname = "GrFontCharHeight")]
        public int char_height (int chr);
        [CCode (cname = "GrFontCharBmpRowSize")]
        public int char_bmp_row_size (int chr);
        [CCode (cname = "GrFontCharBitmapSize")]
        public int char_bitmap_size (int chr);
        [CCode (cname = "GrFontStringWidth")]
        public int string_width (void *text, int len, ChrType type = ChrType.BYTE);
        public int vala_string_width (string text) {
            return string_width (text.data, text.length);
        }
        [CCode (cname = "GrFontStringHeight")]
        public int string_height (void *text, int len, ChrType type = ChrType.BYTE);
        public int vala_string_height (string text) {
            return string_height (text.data, text.length);
        }
        [CCode (cname = "GrProportionalTextWidth")]
        public int proportional_text_width (void *text, int len, ChrType type = ChrType.BYTE);
        public int proportional_vala_string_width (string text) {
            return proportional_text_width (text.data, text.length);
        }

        [CCode (cname = "GrBuildAuxiliaryBitmap")]
        public char *build_auxiliary_bitmap (int chr, TextDirection dir, bool ul);
        [CCode (cname = "GrFontCharBitmap")]
        public char *char_bitmap (int chr);
        [CCode (cname = "GrFontCharAuxBmp")]
        public char *char_aux_bitmap (int chr, TextDirection dir, bool ul);
    }

    [CCode (cname = "union _GR_textColor", has_type_id = false)]
    [SimpleType]
    public struct TextColor : uint32 {
        [CCode (cname = "v")]
        public Color as_color;
        [CCode (cname = "p")]
        unowned ColorTable as_color_table;
    }

    [CCode (cname = "struct _GR_textOption", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class TextOption {
        [CCode (cname = "struct _GR_textOption", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "txo_font")]
        public unowned Font font;
        [CCode (cname = "txo_fgcolor")]
        public unowned TextColor fg_color;
        [CCode (cname = "txo_bgcolor")]
        public unowned TextColor bg_color;
        [CCode (cname = "txo_chrtype")]
        public ChrType chr_type;
        [CCode (cname = "txo_direct")]
        public TextDirection direction;
        [CCode (cname = "txo_xalign")]
        public TextHorizAlign x_align;
        [CCode (cname = "txo_yalign")]
        public TextVertAlign y_align;

        [CCode (cname = "g_malloc0")]
        public TextOption (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));

        [CCode (cname = "GrCharWidth", instance_pos = 1.1)]
        public int char_width (int chr);
        [CCode (cname = "GrCharHeight", instance_pos = 1.1)]
        public int char_height (int chr);
        [CCode (cname = "GrCharSize", instance_pos = 1.1)]
        public void char_size (int chr, out int width, out int height);
        [CCode (cname = "GrStringWidth", instance_pos = 2.1)]
        public int string_width (void *text, int length);
        public int vala_string_width (string test) {
            return string_width (test.data, test.length);
        }
        [CCode (cname = "GrStringHeight", instance_pos = 2.1)]
        public int string_height (void *text, int length);
        public int vala_string_height (string text) {
            return string_height (text.data, text.length);
        }
        [CCode (cname = "GrStringSize", instance_pos = 2.1)]
        public void string_size (void *text, int length, out int w, out int h);
        public void vala_string_size (string text, out int w, out int h) {
            string_size (text.data, text.length, out w, out h);
        }
    }

    [CCode (cname = "GrTextRegion", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class TextRegion {
        [CCode (cname = "GrTextRegion", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "txr_font")]
        public unowned Font font;
        [CCode (cname = "txr_fgcolor")]
        public Color fg_color;
        [CCode (cname = "txr_bgcolor")]
        public Color bg_color;
        [CCode (cname = "txr_buffer")]
        public void *buffer;
        [CCode (cname = "txr_backup")]
        public void *backup;
        [CCode (cname = "txr_width")]
        public int width;
        [CCode (cname = "txr_height")]
        public int height;
        [CCode (cname = "txr_lineoffset")]
        public int line_offset;
        [CCode (cname = "txr_xpos")]
        public int x_pos;
        [CCode (cname = "txr_ypos")]
        public int y_pos;
        [CCode (cname = "txr_chrtype")]
        public ChrType chr_type;

        [CCode (cname = "g_malloc0")]
        public TextRegion (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));

        [CCode (cname = "GrDumpChar", instance_pos = 3.1)]
        public void dump_char (int chr, int col, int row);
        [CCode (cname = "GrDumpText", instance_pos = 4.1)]
        public void dump_text (int col, int row, int width, int height);
        [CCode (cname = "GrDumpTextRegion")]
        public void dump ();
    }

    [CCode (cname = "GrDrawChar")]
    public void draw_char (int chr, int x, int y, TextOption opt);
    [CCode (cname = "GrDrawString")]
    public void draw_string (void *text, int length, int x, int y, TextOption opt);
    public void draw_vala_string (string text, int x, int y, TextOption opt) {
        draw_string (text.data, text.length, x, y, opt);
    }
    [CCode (cname = "GrTextXY")]
    public void draw_text_xy (int x, int y, string text, Color fg, Color bg);
